--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@paper-design/shaders-react": "^0.0.63",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fumadocs-core": "16.0.10",
     "fumadocs-mdx": "13.0.7",
     "fumadocs-ui": "16.0.10",
+    "katex": "^0.16.25",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
