✨ feat(build): Add automated changelog and special-thanks generation
- Create build scripts for dynamic content generation at build time
  - build-changelog.ts: Fetch GitHub Releases and generate changelog.mdx
  - build-special-thanks.ts: Fetch contributors and generate special-thanks.mdx
  - prebuild.ts: Orchestrate both generators before Next.js build

- Update GitHub Actions workflow to run prebuild step
  - Automatically fetch latest data from GitHub API during deployment
  - Configure environment variables for API access

- Add package.json prebuild script and tsx dependency

- Create env.example with complete configuration documentation

- Update .gitignore to exclude .env files

This replaces the previous Python-based docs_assistant approach with
TypeScript build-time generation, eliminating the need for a separate
documentation update service.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,17 @@ jobs:
       - name: 📦 Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: 🔄 Pre-build (Generate Changelog & Special Thanks)
+        run: bun run prebuild
+        env:
+          # GitHub API Token (自动提供)
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # 源仓库配置
+          SOURCE_REPO: QuantumNous/new-api
+          # 爱发电 API (可选，如需配置请在 Repository Secrets 中添加)
+          AFDIAN_USER_ID: ${{ secrets.AFDIAN_USER_ID }}
+          AFDIAN_TOKEN: ${{ secrets.AFDIAN_TOKEN }}
+
       - name: 🔨 Build with Next.js
         run: bun run build
         env:
