🌐 feat(i18n): migrate documentation translation system to TypeScript
Migrate the document translation automation from Python to TypeScript/Bun,
providing a more integrated solution that aligns with the project's tech stack.

### Major Changes

**Translation Script**
- Add `scripts/translate-docs.ts` with TypeScript implementation
- Support concurrent translation with configurable workers
- Implement exponential backoff retry mechanism
- Add intelligent detection for manually translated files
- Support both `.md` and `.mdx` file formats

**GitHub Actions Workflow**
- Add `.github/workflows/translate.yml` with 3 translation modes:
  - `changed`: Translate only modified files (auto-triggered on push)
  - `force_all`: Force re-translate all documents (manual trigger)
  - `missing_only`: Translate only missing translations (manual trigger)
- Auto-create pull requests for review
- Integrate with Bun runtime environment

**Configuration**
- Update `package.json` with translation scripts:
  - `bun run translate` - Translate specific files
  - `bun run translate:all` - Translate all files in zh directory
  - `bun run translate:force` - Force re-translate existing files
- Update `env.example` with OpenAI API configuration options

### Technical Details

- **Tech Stack**: Python → TypeScript + Bun
- **Directory Structure**: Adapted to `content/docs/zh/en/ja/` layout
- **Translation Source**: Chinese (`zh`) as the base language
- **Translation Targets**: English (`en`) and Japanese (`ja`)
- **API**: OpenAI GPT-4o-mini (configurable)
- **Terminology**: Built-in glossary for technical terms (Token, Channel, Quota, etc.)

### Breaking Changes

None. This is a new implementation that doesn't affect existing functionality.

### Configuration Required

Set the following secrets in GitHub repository settings:
- `OPENAI_API_KEY` (required) - OpenAI API key for translation
- `OPENAI_BASE_URL` (optional) - Custom API endpoint
- `OPENAI_MODEL` (optional) - Model selection (default: gpt-4o

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "next start",
     "postinstall": "fumadocs-mdx",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "translate": "bun scripts/translate-docs.ts",
+    "translate:all": "bun scripts/translate-docs.ts",
+    "translate:force": "bun run translate"
   },
   "dependencies": {
     "@orama/orama": "^3.1.16",
