--- a/env.example
+++ b/env.example
@@ -16,3 +16,31 @@ SOURCE_REPO=QuantumNous/new-api
 # Optional: If not configured, Special Thanks page will use cached data
 # AFDIAN_USER_ID=your_afdian_user_id
 # AFDIAN_TOKEN=your_afdian_token
+
+# ============================================
+# OpenAI API (for document translation)
+# ============================================
+# Required: OpenAI API Key for automatic translation
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Optional: Custom OpenAI API endpoint (default: https://api.openai.com/v1)
+# OPENAI_BASE_URL=https://api.openai.com/v1
+
+# Optional: Model to use for translation (default: gpt-4o-mini)
+# OPENAI_MODEL=gpt-4o-mini
+
+# Optional: Maximum retry attempts on failure (default: 3)
+# MAX_RETRIES=3
+
+# Optional: Initial retry delay in seconds (default: 2)
+# RETRY_DELAY=2
+
+# Optional: Retry backoff multiplier (default: 2.0)
+# RETRY_BACKOFF=2.0
+
+# Optional: Maximum concurrent translation workers (default: 3)
+# MAX_WORKERS=3
+
+# Optional: Force re-translate existing files (default: false)
+# FORCE_TRANSLATE=false
+
